force-app/main/default/objects/ActivityReport__c/ActivityReport__c.object-meta.xml
<CustomObject>
    <label>활동 보고</label>
    <nameField>
        <label>Activity Report Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>