force-app/main/default/objects/ActivityReport__c/fields/CommentForApproval__c.field-meta.xml
<CustomField>
    <fullName>CommentForApproval__c</fullName>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>