force-app/main/default/objects/ActivityReport__c/fields/DescriptionRichText__c.field-meta.xml
<CustomField>
    <fullName>DescriptionRichText__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>