force-app/main/default/objects/ActivityReport__c/fields/EventStartDate__c.field-meta.xml
<CustomField>
    <fullName>EventStartDate__c</fullName>
    <label>EventStartDate</label>
    <type>Date</type>
</CustomField>