force-app/main/default/objects/ActivityReport__c/fields/IsApprovalRequest__c.field-meta.xml
<CustomField>
    <fullName>IsApprovalRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>대량 승인 프로세스 실행을 위한 플로우의 조건이 되는 확인란 필드</description>
    <inlineHelpText>승인 요청을 원할 시 이 확인란을 선택해주세요.</inlineHelpText>
    <label>Approval Request</label>
    <type>Checkbox</type>
</CustomField>