force-app/main/default/objects/ActivityReport__c/fields/IsSendECCAT__c.field-meta.xml
<CustomField>
    <fullName>IsSendECCAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSendECCAT</label>
    <type>Checkbox</type>
</CustomField>