force-app/main/default/objects/ActivityReport__c/fields/OilTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>OilTotalAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OilTotalAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>