force-app/main/default/objects/ActivityReport__c/fields/OilTotalDistance__c.field-meta.xml
<CustomField>
    <fullName>OilTotalDistance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OilTotalDistance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>