force-app/main/default/objects/ActivityReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EventStartDate__c</columns>
    <columns>Description__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CreatedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>모든 활동보고</label>
</ListView>