force-app/main/default/objects/ActivityReport__c/listViews/MyActivity.listView-meta.xml
<ListView>
    <fullName>MyActivity</fullName>
    <columns>NAME</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>EventStartDate__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>나의 활동보고</label>
</ListView>