force-app/main/default/objects/ActivityReport__c/listViews/TeamManager_ActivityReport.listView-meta.xml
<ListView>
    <fullName>TeamManager_ActivityReport</fullName>
    <columns>NAME</columns>
    <columns>EventStartDate__c</columns>
    <columns>Description__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>OilTotalAmount__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>팀장</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>