force-app/main/default/objects/ActivityReport__c/listViews/UnacceptedActivityReport.listView-meta.xml
<ListView>
    <fullName>UnacceptedActivityReport</fullName>
    <columns>NAME</columns>
    <columns>EventStartDate__c</columns>
    <columns>OilTotalAmount__c</columns>
    <columns>CommentForApproval__c</columns>
    <columns>Description__c</columns>
    <columns>CreatedDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsApprovalRequest__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>미승인 활동보고</label>
</ListView>